--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -4,12 +4,11 @@
         padding: 0;
         margin: 0;  
         box-sizing: border-box;
-        font-family: 'Poppins';
         text-decoration: none;
         list-style: none;
 }
  body {
-        background: #6e0f0f;
+        background: #ee4242;
         display: flex;
         flex-direction: column;
 }
@@ -27,7 +26,7 @@
 }
 header {
     font-family: 'Poppins';
-    background: #5b0c0c;
+    background: #ee4242;
     width: 80%;
     height: 15%;
     display: flex;
@@ -63,8 +62,8 @@ nav ul {
 }
 
 nav ul li a {
-    color: #000000;
-    background-color:#f7b6b9 ;
+    color: #fff;
+    background-color:#fd7b7b ;
     display: block;
     margin: 0 2px;
     font-weight: 600;
@@ -73,8 +72,8 @@ nav ul li a {
     border-radius: 30px;
 }
 nav ul li a:hover {
-    background: #f7b6b9;
-    color: #000000;
+    background: #fd7b7b;
+    color: #fff;
 }
 
 nav ul li a.ativo {
@@ -93,7 +92,7 @@ nav ul li a.ativo {
     width: 50%;
     font-size: 50px;
     font-family: "League Spartan";
-    color: #f7b6b9;
+    color: #fff;
     display: flex;
     align-items: last baseline;
     flex-direction: column;
@@ -101,12 +100,14 @@ nav ul li a.ativo {
 .texto1{
     font-size: 25px;
     font-family: "League Spartan";
-    color: #f7b6b9;
-    width: 100%;
+    color: #fff;
+    width: 87%;
     text-align: justify;
 }
+.texto2{
+    align-items: center;
+}
+
 .texto2 img{
-    width: 100%;
-    height: auto;
-    font-size: 30px;
+    width: 700px;
 }
