--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -111,3 +111,49 @@ nav ul li a.ativo {
 .texto2 img{
     width: 700px;
 }
+
+/*CSS do Sobre Nos*/
+.dois {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.fundo_sobre_nos {
+    width: 100%;
+    height: 100vh;
+    background-image: url("imagens/fundosobre.png");
+    position: relative;
+    z-index: -1;
+}
+
+.container_sobre_nos {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.titulo_sobre_nos {
+    width: 50%;
+    font-size: 50px;
+    font-family: "League Spartan";
+    color: #fff;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.texto_sobre_nos {
+    width: 100%;
+    font-size: 25px;
+    font-family: "League Spartan";
+    color: #fff;
+    width: 87%;
+    text-align: justify;
+}
+
+.texto_sobre_nos2 img {
+    width: 900px;
+}
