--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -157,3 +157,44 @@ nav ul li a.ativo {
 .texto_sobre_nos2 img {
     width: 900px;
 }
+
+/* CSS Contato */
+
+.tres{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.fundocontato {
+    width: 100%;
+    height: 100vh;
+    background-image: url("imagens/fundocontato.png");
+    position: relative;
+    z-index: -1;
+}
+.containercontato {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.titulocontato{
+    width: 50%;
+    font-size: 35px;
+    font-family: "League Spartan";
+    color: #fff;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.textocontato{
+    margin-top: 20px;
+    width: 100%;
+    font-size: 25px;
+    font-family: "League Spartan";
+    color: #fff;
+    width: 87%;
+    text-align: justify; 
+}
