--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -235,25 +235,51 @@ nav ul li a.ativo {
   }
 
   .card_um{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     width: 350px;
     height: 100%;
     background: #ba0000;
     border-radius: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    font-family: "League Spartan";
+    color: #fff;
+  }
+
+  .card_um .titulocard{
+    margin-top: 15px;
+    align-items: start;
+    font-size: 15px;
+  }
+
+  .card_um .textocard{
+    align-items: start;
+    font-size: 10px;
+  }
+
+ .icons img{
+    width: 15%;
+    height: 100%;
   }
   
   .sec{
     background: #ffffff;
+    color:#0f1923
   }
 
   .th{
     background: #0f1923;
+    color: #fff;
   }
+
 /*CSS do Sobre Nos*/
 .dois {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    align-items: center;
 }
 
 .fundo_sobre_nos {
@@ -276,7 +302,7 @@ nav ul li a.ativo {
     width: 50%;
     font-size: 50px;
     font-family: "League Spartan";
-    color: #000000;
+    color: #0f1923;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -286,7 +312,7 @@ nav ul li a.ativo {
     width: 100%;
     font-size: 25px;
     font-family: "League Spartan";
-    color: #000000;
+    color: #0f1923;
     width: 87%;
     text-align: justify;
 }
@@ -303,35 +329,158 @@ nav ul li a.ativo {
     overflow: hidden;
 }
 
-.fundocontato {
+.fundoequipe {
     width: 100%;
     height: 100vh;
-    background-color: #d4d6d6;
+    background-color: #0f1923;
     position: relative;
     z-index: -1;
 }
-.containercontato {
+.containerequipe {
     width: 100%;
     height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.titulocontato{
-    width: 50%;
-    font-size: 35px;
     font-family: "League Spartan";
-    color: #000000;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
 }
-.textocontato{
-    margin-top: 20px;
-    width: 100%;
-    font-size: 25px;
-    font-family: "League Spartan";
-    color: #000000;
-    width: 87%;
-    text-align: justify; 
+
+.titulo_equipe {
+  margin-top: 50px;
+  width: 100%;
+  font-size: 40px;
+  font-family: "League Spartan";
+  color: #fff;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
+
+.texto_equipe {
+  width: 100%;
+  font-size: 25px;
+  font-family: "League Spartan";
+  color: #fff;
+  width: 87%;
+  text-align: justify;
+}
+
+.divisaocards{
+  display: flex;
+}
+
+.containercard{
+  display: flex;
+  place-items: center;
+  margin-inline: 1.5rem;
+  padding-block: 5rem;
+}
+
+.cardcontainer2{
+  display: grid;
+  row-gap: 3.5rem;
+}
+
+.cardarticle{
+  position: relative;
+  overflow: hidden;
+}
+
+.cardimagem{
+  width: 328px;
+  border-radius: 1.5rem;
+}
+
+.carddados{
+  width: 280px;
+  background-color: #fff;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
+  border-radius: 1rem;
+  position: absolute;
+  bottom: -9rem;
+  left: 0;
+  right: 0;
+  margin-inline: auto;
+  /* opacity: 0; */
+  transition: opacity 1s 1s;
+}
+
+.carddescricao1{
+  display: block;
+  font-size: 20px;
+  margin-bottom: .25rem;
+}
+
+.titulocard1{
+  font-size: 20px;
+  font-weight: bolder;
+  color: #000000;
+  margin-bottom: .75rem;
+}
+
+.botaocard{
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bolder;
+  color: #000000;
+}
+.botaocard:hover{
+  text-decoration: underline;
+}
+
+.cardarticle:hover .carddados{
+  animation: show-data 1s forwards;
+  opacity: 1;
+  transition: opacity .3s;
+}
+
+.cardarticle:hover{
+  animation: remove-overflow 2s forwards;
+}
+
+.cardarticle:not(:hover){
+  animation: show-overflow 2s forwards;
+}
+
+.cardarticle:not(:hover) .carddados{
+  animation: remove-data 1s forwards;
+}
+
+@keyframes show-data{
+  50%{
+    transform: translateY(-10rem);
+  }
+  100%{
+    transform: translateY(-7rem);
+  }
+}
+
+@keyframes remove-overflow{
+  to{
+    overflow: initial;
+  }
+}
+
+@keyframes remove-data{
+  0%{
+    transform: translateY(-7rem);
+  }
+  50%{
+    transform: translateY(-10rem);
+  }
+  100%{
+    transform: translateY(.5rem);
+  }
+}
+
+@keyframes show-overflow{
+  0%{
+    overflow: initial;
+    pointer-events: none;
+  }
+  50%{
+    overflow: hidden;
+  }
+}
+
