--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -342,6 +342,7 @@ nav ul li a.ativo {
     width: 100%;
     height: 85%;
     display: flex;
+    transform: scale(0.6);
     flex-direction: column;
     align-items: center;
     font-family: "League Spartan";
@@ -370,9 +371,17 @@ nav ul li a.ativo {
 
 .containercard{
   display: flex;
+  justify-content: center;
   place-items: center;
   margin-inline: 1.5rem;
   padding-block: 2rem;
+}
+
+.alinhamentocardequipe{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .cardcontainer2{
