--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -593,3 +593,74 @@ nav ul li a.ativo {
   }
 }
 
+@media (max-width: 430px) {
+  .fundo {
+    background-image: url(imagens/fundomobile.png);
+    background-position: -120px;
+    background-size: cover;
+  }
+
+  header {
+    padding: 0;
+    height: 12%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  header a {
+    font-size: 0.9em;
+    color: #000000;
+  }
+
+  header .logo {
+    position: absolute;
+    width: 100%;
+    top: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .logo img {
+    width: 15%;
+  }
+
+  nav {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  nav ul {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  nav ul li {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container {
+    margin: 0;
+    justify-content: center;
+  }
+
+  .titulo {
+    width: 75%;
+    align-items: center;
+  }
+
+  .texto1 {
+    text-align: center;
+  }
+}
