--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -228,6 +228,7 @@ nav ul li a.ativo {
     width: 100%;
     height: 250px;
     position: absolute;
+    justify-content: first baseline;
     z-index: 100;
     bottom: -100px;
     display: flex;
@@ -241,8 +242,9 @@ nav ul li a.ativo {
     flex-direction: column;
     justify-content: flex-start;
     width: 350px;
-    height: 100%;
+    height: fit-content;
     background: #ba0000;
+    text-align: justify;
     border-radius: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     font-family: "League Spartan";
@@ -261,7 +263,7 @@ nav ul li a.ativo {
   }
 
  .icons img{
-    width: 15%;
+    width: 17%;
     height: 100%;
   }
   
@@ -594,6 +596,12 @@ nav ul li a.ativo {
   }
 }
 
+.carrossel {
+  color: #ffffff;
+  background-color: transparent;
+  font-size: 23px;
+}
+
 @media (max-width: 430px) {
   .fundo {
     background-image: url(imagens/fundomobile.png);
@@ -668,16 +676,23 @@ nav ul li a.ativo {
   .espaco_card {
     overflow-x: scroll;
     overflow-y: hidden;
-    align-items: start;
+    justify-content: last baseline;
   }
 
   .card_um{
-    width: 50%;
+    animation: fade 3s infinite;
+    width: fit-content;
   }
-  .card_um sec{
-    width: 50%;
-  }
-  .card_um th{
-    width: 50%;
+
+  @keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 }
