Atualizando fotos da equipe no site

--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -721,53 +721,26 @@ nav ul li a.ativo {
   .container_sobre_nos {
     display: flex;
     flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
   }
 
   .texto_sobre_nos2 {
-    display: grid;
-    margin-top: 120px;
-    width: 75%;
-    justify-self: center;
+    height: fit-content;
   }
 
   .texto_sobre_nos2 img {
-    width: 100%;
+    width: 75%;
   }
 
   .titulo_sobre_nos {
-    overflow-y: visible;
+    overflow-y: scroll;
+    display: grid;
     flex-direction: column;
-    margin-top: 200px;
-    height: 50%;
+    height: 75%;
     width: 85%;
   }
 
   .titulo_sobre_nos h1{
     align-self: center;
     justify-self: center;
-  }
-
-  .titulo_equipe {
-    margin: 0;
-  }
-
-  .containercard {
-    
-  }
-
-  .quatro {
-    height: fit-content;
-  }
-
-  .fundovalores {
-    height: fit-content;
-  }
-
-  .box-container {
-    display: flex;
-    flex-direction: column;
-    height: fit-content;  
   }
 }
