--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -78,6 +78,49 @@ nav ul li a {
 nav ul li a.ativo {
     color: #ffffff;
 }
+
+footer {
+  font-family: 'Poppins';
+  background: #0f1923;
+  width: 100%;
+  height: 30%; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 60px;
+  color: #ffffff;
+  box-sizing: border-box; 
+}
+
+.footer-logo {
+  display: flex;
+  width: 120px;
+  margin-bottom: 20px;
+}
+
+.footer-logo img {
+  width: 100%;
+}
+
+.footer-info {
+  text-align: center;
+}
+
+.footer-info p {
+  margin: 5px 0;
+}
+
+.footer-info a {
+  color: #ffffff;
+  text-decoration: none;
+  margin: 0 5px;
+}
+
+.footer-info a:hover {
+  text-decoration: underline;
+}
+
 .container{
     width: 100%;
     height: 85%;
