--- a/Site Institucional/public/css/style.css
+++ b/Site Institucional/public/css/style.css
@@ -83,7 +83,7 @@ footer {
   font-family: 'Poppins';
   background: #0f1923;
   width: 100%;
-  height: 30%; 
+  height: fit-content; 
   display: flex;
   flex-direction: column;
   align-items: center;
