--- a/Site Institucional/public/css/styleLogin.css
+++ b/Site Institucional/public/css/styleLogin.css
@@ -68,12 +68,13 @@ a:hover {
 /* Onde ficam os elementos para cadastro */
 .container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    height: 80vh; /*100% da altura da tela */
+    height: 120vh; /*100% da altura da tela */
     padding-left: 50px; /* Alinhar o formulário à esquerda */
     /* background-color:#982727; */
     padding-top: 5px;
+    overflow: hidden;
 }
 
 
@@ -82,9 +83,10 @@ a:hover {
     padding: 40px;
     padding-top: 80px;
     border-radius: 20px;
+    align-items: center;
     width: 45%;
     height: 90%;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 h1 {
